[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperpress"
version = "1.0.0"
description = "Adaptive Meta-Compression Engine — beats zlib-6 and LZMA"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Belkis / BEL KI", email = "info@belki.dev" },
]
keywords = ["compression", "lzma", "zlib", "meta-compression", "adaptive"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Archiving :: Compression",
]

[project.urls]
Homepage = "https://github.com/BEKO2210/HyperPress"
Repository = "https://github.com/BEKO2210/HyperPress"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
